# ecommerce

./: .gitignore  Dockerfile  GUIDE_POSTGRE.md  LICENSE  Makefile  README.md  docker-compose.yml  lint.sh  permissions_table  pyproject.toml
.github/workflows/: django.yml  pylint.yml
core/: mixins.py  view_permissions.md  views.py
core/templates/: 403.html  base.html  base_update_create_form.html  home.html
ecommerce/: constants.py  middleware.py  settings.py  test_admin.py  urls.py  utils.py
ecommerce/tests/: test_admin.py  test_permissions.py
orders/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
orders/templates/: create_order.html  create_order_item.html  delete_order.html  delete_order_item.html  order_detail.html  order_item_detail.html  order_item_list.html  order_list.html  orderitem_detail.html  update_order.html  update_order_item.html
orders/tests/: factories.py  test_orders_integrations.py  test_views_functionality.py  test_views_permissions.py  tests.py
products/: admin.py  managers.py  models.py  test_views.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_name_alter_product_name_and_more.py  0003_alter_product_name.py
products/templates/: category_detail.html  category_list.html  create_category.html  create_product.html  delete_category.html  delete_product.html  product_detail.html  (+3 more)
templates/: 404.html  500.html  access_denied.html
users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+11 files in other folders)
